--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -21,7 +21,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/index.min.js"></script>
 
-    <title>{% block title %} {% endblock %} | NestFixer</title>
+    <title>{% block title %} {% endblock %} | Ghar ko Services</title>
   </head>
 
   <body class="flex flex-col min-h-screen">
