--- a/core/templates/core/footer.html
+++ b/core/templates/core/footer.html
@@ -19,10 +19,10 @@
               <h3
                 class="mb-2 text-2xl font-semibold uppercase mt-5 text-yellow-400"
               >
-                NestFixer
+                Ghar ko Services
               </h3>
               <p>
-                NESTFIXER is your go-to online platform for all your home service
+                Ghar ko Services is your go-to online platform for all your home service
                 needs. From plumbing to electrical work,our skilled professionals
                 are just a click away. Enjoy hassle-free booking,transparent
                 pricing, and reliable service. Your home solutions made easy.
@@ -80,7 +80,7 @@
             <div class="text-sm text-gray-500 text-yellow-400">
               <span
                 >© 2023
-                <a href="#" class="hover:text-gray-300">NestFixer™</a></span
+                <a href="#" class="hover:text-gray-300">Ghar ko Services</a></span
               >
               <span class="block mt-2">All Rights Reserved.</span>
             </div>
