--- a/core/templates/core/terms.html
+++ b/core/templates/core/terms.html
@@ -14,7 +14,7 @@
                 
         
                 <p >
-                    Welcome to NestFixer's Terms and Conditions. These terms govern your use of our website.
+                    Welcome to Ghar ko Services's Terms and Conditions. These terms govern your use of our website.
                     By accessing or using our website, you agree to comply with and be bound by these terms.
                     If you do not agree with these terms, please do not use our website.
                 </p>
@@ -53,7 +53,7 @@
                 <h2 class="text-2xl font-semibold mb-2 text-black dark:text-black">Intellectual Property</h2>
         
                 <p>
-                    The website and its original content, features, and functionality are owned by NestFixer
+                    The website and its original content, features, and functionality are owned by Ghar ko Services
                     and are protected by international copyright, trademark, patent, trade secret, and other
                     intellectual property or proprietary rights laws.
                 </p>
