--- a/core/templates/core/features.html
+++ b/core/templates/core/features.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="w-full shrink-0 grow-0 basis-auto lg:w-6/12 xl:w-8/12 bg-white">
                   <div class="px-6 py-12 md:px-12">
-                    <h2 class="mb-6 pb-2 text-4xl font-bold">NESTFIXER</h2>
+                    <h2 class="mb-6 pb-2 text-4xl font-bold">Ghar ko Services</h2>
                     <p class="mb-6 pb-2 text-gray-900 dark:text-gray-900 font-medium font-sans">
                       Bringing unparalleled convenience right to your doorstep – our platform is your gateway to a world of 
                       services designed to elevate your lifestyle. Discover the ease of accessing a myriad of expert services
