--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -8,7 +8,7 @@
         <div class="w-full bg-white rounded-lg shadow-md">
             <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
                 <a href="{% url 'core:index' %}" class="flex items-center mb-6 text-2xl font-semibold text-blue-950">
-                    NestFixer
+                    Ghar ko Services
                 </a>
                 <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl">
                     Sign in to your account
