--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -21,7 +21,7 @@
           class="ml-0 mr-3"
         />
         <a href="/" class="text-xl font-bold text-blue-950 inline-block"
-          >NestFixer</a
+          >Ghar ko Services</a
         >
       </div>
     </div>
