--- a/core/templates/core/privacy.html
+++ b/core/templates/core/privacy.html
@@ -9,7 +9,7 @@
     <div class="mb-10 text-black dark:text-black">
         <h1 class="text-4xl font-semibold mb-4 text-black dark:text-black">Privacy Policy</h1>
 
-        <p>Your privacy is important to us. This Privacy Policy explains how NestFixer collects, uses, and protects your personal information when you use our website.</p>
+        <p>Your privacy is important to us. This Privacy Policy explains how Ghar ko Services collects, uses, and protects your personal information when you use our website.</p>
 
         <h2 class="text-2xl font-semibold mb-2 text-black dark:text-black">Information We Collect</h2>
         <p>We collect personal information that you voluntarily provide when using our website. This may include your name, email address, phone number, and other details relevant to the services we offer.</p>
