--- a/core/templates/core/features.html
+++ b/core/templates/core/features.html
@@ -95,7 +95,7 @@
           <section class="mb-32 text-center">
             <div class="flex justify-center">
               <div class="max-w-[700px] text-center">
-                <h2 class="mb-6 text-center text-3xl text-yellow-900 font-bold">
+                <h2 class="mb-6 text-center text-3xl text-blue-900 font-bold">
                   Why is it so<u class="text-sky-950 ">
                     great?</u>
                 </h2>
