--- a/core/templates/core/footer.html
+++ b/core/templates/core/footer.html
@@ -17,7 +17,7 @@
                 class="ml-0"
               />
               <h3
-                class="mb-2 text-2xl font-semibold uppercase mt-5 text-yellow-400"
+                class="mb-2 text-2xl font-semibold uppercase mt-5 text-blue-400"
               >
                 Ghar ko Services
               </h3>
@@ -29,7 +29,7 @@
               </p>
             </div>
             <div class="w-1/3">
-              <h3 class="mb-5 text-sm font-semibold uppercase text-yellow-400">
+              <h3 class="mb-5 text-sm font-semibold uppercase text-blue-400">
                 Menu
               </h3>
               <ul>
@@ -55,7 +55,7 @@
             </div>
             <div class="mb-6">
               <h3
-                class="text-sm font-semibold uppercase text-white mb-5 text-yellow-400"
+                class="text-sm font-semibold uppercase text-white mb-5 text-blue-400"
               >
                 Legal
               </h3>
@@ -77,7 +77,7 @@
             class="my-6 border-gray-900 sm:mx-auto dark:border-gray-700 lg:my-8"
           />
           <div class="flex flex-col items-center">
-            <div class="text-sm text-gray-500 text-yellow-400">
+            <div class="text-sm text-gray-500 text-blue-400">
               <span
                 >© 2023
                 <a href="#" class="hover:text-gray-300">Ghar ko Services</a></span
