--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -12,7 +12,7 @@ Welcome
 <!-- Categoreis -->
 <div class="mt-3 px-6 py-3 bg-gray-50 rounded-xl">
   <div>
-  <h2 class="mb-1 ml-3 text-3xl text-center text-yellow-500 font-bold">
+  <h2 class="mb-1 ml-3 text-3xl text-center text-blue-500 font-bold">
     Explore through our
     <u class="text-sky-950 ">
       Popular Categories</u>
