--- a/item/templates/item/detail.html
+++ b/item/templates/item/detail.html
@@ -75,7 +75,7 @@
                                 {% if item.average_rating %}
                                     {% for i in "12345" %}
                                         {% if i|add:"0" <= item.average_rating %}
-                                            <i class="fa fa-star checked text-yellow-500"></i>
+                                            <i class="fa fa-star checked text-blue-500"></i>
                                         {% else %}
                                             <i class="fa fa-star text-gray-500"></i>
                                         {% endif %}
