--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -132,7 +132,7 @@ prev.addEventListener("click", goPrev);
                   <span class="text-gray-400 text-xs">&nbsp;</span>
                 {% endif %}
             </div>
-            <p class="text-amber-600 font-semibold text-2xl">Rs. {{ item.price }} per day</p>
+            <p class="text-blue-600 font-semibold text-2xl">Rs. {{ item.price }} per day</p>
             
             
         </div>
@@ -170,7 +170,7 @@ prev.addEventListener("click", goPrev);
                       <span class="text-gray-400 text-xs">&nbsp;</span>
                   {% endif %}
               </div>
-              <p class="text-amber-600 font-semibold text-2xl">Rs. {{ item.price }} per day</p>
+              <p class="text-blue-600 font-semibold text-2xl">Rs. {{ item.price }} per day</p>
               
               
           </div>
@@ -209,7 +209,7 @@ prev.addEventListener("click", goPrev);
                     <span class="text-gray-400 text-xs">&nbsp;</span>
                 {% endif %}
             </div>
-            <p class="text-amber-600 font-semibold text-2xl">Rs. {{ item.price }} per day</p>
+            <p class="text-blue-600 font-semibold text-2xl">Rs. {{ item.price }} per day</p>
             
             
         </div>
