--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -10,7 +10,7 @@
 
 <body>
     <nav
-    class="fixed top-0 left-0 right-0 z-40 px-12 py-4  flex flex-col lg:flex-row justify-evenly items-center border-b border-gray-200 bg-amber-300"
+    class="fixed top-0 left-0 right-0 z-40 px-12 py-4  flex flex-col lg:flex-row justify-evenly items-center border-b border-gray-200 bg-blue-300"
   >
     <div class="flex items-center justify-between lg:justify-start">
       <div class="flex items-center">
