--- a/core/templates/core/midsectionfaq.html
+++ b/core/templates/core/midsectionfaq.html
@@ -57,7 +57,7 @@
                       aria-labelledby="flush-headingOne"
                       data-te-parent="#accordionFlushExample"
                     >
-                      <div class="py-4 px-5 text-base text-gray-900 dark:text-amber-400 font-medium ">
+                      <div class="py-4 px-5 text-base text-gray-900 dark:text-blue-400 font-medium ">
                         Our platform connects users with a variety of services, including plumbing, electrical work, and more. If you're a service provider, you can showcase your skills to potential clients.
       
                       </div>
@@ -99,7 +99,7 @@
                       aria-labelledby="flush-headingTwo"
                       data-te-parent="#accordionFlushExample"
                     >
-                      <div class="py-4 px-5 text-gray-900 dark:text-gray-900 font-medium dark:text-amber-400 ">
+                      <div class="py-4 px-5 text-gray-900 dark:text-gray-900 font-medium dark:text-blue-400 ">
                         Users can easily request services by browsing through available providers, selecting a service, and scheduling a convenient time. If you're a service provider, sign up on our platform, create a profile, and start offering your services.
       
                       </div>
@@ -142,7 +142,7 @@
                       aria-labelledby="flush-headingThree"
                       data-te-parent="#accordionFlushExample"
                     >
-                      <div class="py-4 px-5 text-gray-900 dark:text-gray-900 font-medium dark:text-amber-400">
+                      <div class="py-4 px-5 text-gray-900 dark:text-gray-900 font-medium dark:text-blue-400">
                         Absolutely! Users can customize their service requests based on their needs, and service providers can showcase their expertise, experience, and the range of services they offer on their profiles.
       
                       </div>
