--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -40,7 +40,7 @@ Dashboard
                                     <span class="text-gray-400 text-xs">&nbsp;</span>
                                 {% endif %}
                             </div>
-                            <p class="text-amber-600 font-semibold text-2xl">Rs. {{ item.price }} per day</p>
+                            <p class="text-blue-600 font-semibold text-2xl">Rs. {{ item.price }} per day</p>
                         </div>
                     </a>
                 </div>
