--- a/item/templates/item/detail.html
+++ b/item/templates/item/detail.html
@@ -219,7 +219,7 @@
                                     <span class="text-gray-400 text-xs">&nbsp;</span>
                                 {% endif %}
                             </div>
-                            <p class="text-amber-600 font-semibold text-2xl">Rs. {{ item.price }} per day</p>
+                            <p class="text-blue-600 font-semibold text-2xl">Rs. {{ item.price }} per day</p>
                         </div>
                     </a>
                 </div>
